--- a/following.html
+++ b/following.html
@@ -22,11 +22,11 @@
                 COLOR PAL
             </h1>
             <ul>
-                <li><a href="index.html">login</a></li>
-                <li><a href="generator.html">generate</a></li>
-                <li><a href="create.html">create</a></li>
-                <li><a href="palletes.html">palletes</a></li>
-                <li><a href="following.html">friends</a></li>
+                <li><a href="index.html">Login</a></li>
+                <li><a href="generator.html">Generate</a></li>
+                <li><a href="create.html">Create</a></li>
+                <li><a href="palletes.html">Palettes</a></li>
+                <li><a href="following.html">Friends</a></li>
             </ul>
         </header>
         <main class="main-container">
@@ -35,43 +35,43 @@
                 <span id="faculty-glyphic-regular">FRIENDS</span>
                 <div>
                     USERNAME1
-                    <button type="button" class="btn btn-primary my-button">unfollow</button>
+                    <button type="button" class="btn btn-primary my-button">Unfollow</button>
                 </div>
                 <div>
                     USERNAME2
-                    <button type="button" class="btn btn-primary my-button">unfollow</button>
+                    <button type="button" class="btn btn-primary my-button">Unfollow</button>
                 </div>
                 <div>
                     USERNAME3
-                    <button type="button" class="btn btn-primary my-button">unfollow</button>
+                    <button type="button" class="btn btn-primary my-button">Unfollow</button>
                 </div>
                 <form>
                     <input type="email" class="form-control" placeholder="example@email.com">
-                    <button type="button" class="btn btn-primary my-button">add friend</button>
+                    <button type="button" class="btn btn-primary my-button">Add Friend</button>
                 </form>
             </div>
             <div class="main-transparent-container">
                 <span id="faculty-glyphic-regular">NOTIFICATIONS</span>
                 <div>
-                    USERNAME1 shared a pallete
-                    <button type="button" class="btn btn-primary my-button">add</button>
-                    <button type="submit" class="btn btn-secondary">dismiss</button>
+                    USERNAME1 shared a palette
+                    <button type="button" class="btn btn-primary my-button">Add</button>
+                    <button type="submit" class="btn btn-secondary">Dismiss</button>
                 </div>
                 <div>
-                    USERNAME1 shared a pallete
-                    <button type="button" class="btn btn-primary my-button">add</button>
-                    <button type="submit" class="btn btn-secondary">dismiss</button>
+                    USERNAME1 shared a palette
+                    <button type="button" class="btn btn-primary my-button">Add</button>
+                    <button type="submit" class="btn btn-secondary">Dismiss</button>
                 </div>
                 <div>
-                    USERNAME3 shared a pallete
-                    <button type="button" class="btn btn-primary my-button">add</button>
-                    <button type="submit" class="btn btn-secondary">dismiss</button>
+                    USERNAME3 shared a palette
+                    <button type="button" class="btn btn-primary my-button">Add</button>
+                    <button type="submit" class="btn btn-secondary">Dismiss</button>
                 </div>
             </div>
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">GitHub</a></span>
         </footer>
     </body>
 </html>
