--- a/palletes.html
+++ b/palletes.html
@@ -18,11 +18,11 @@
                 COLOR PAL
             </h1>
             <ul>
-                <li><a href="index.html">login</a></li>
-                <li><a href="generator.html">generate</a></li>
-                <li><a href="create.html">create</a></li>
-                <li><a href="palletes.html">palletes</a></li>
-                <li><a href="following.html">friends</a></li>
+                <li><a href="index.html">Login</a></li>
+                <li><a href="generator.html">Generate</a></li>
+                <li><a href="create.html">Create</a></li>
+                <li><a href="palletes.html">Palettes</a></li>
+                <li><a href="following.html">Friends</a></li>
             </ul>
         </header>
         <main class="main-container">
@@ -35,8 +35,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -48,8 +48,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -61,8 +61,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
              <div class="container main-transparent-container">
@@ -74,8 +74,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -87,8 +87,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -100,8 +100,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -113,8 +113,8 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
             <div class="container main-transparent-container">
@@ -126,14 +126,14 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">share</button>
-                    <button type="button" class="btn btn-secondary">remove</button>
+                    <button type="button" class="btn btn-primary my-button">Share</button>
+                    <button type="button" class="btn btn-secondary">Remove</button>
                 </div>
             </div>
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">GitHub</a></span>
         </footer>
     </body>
 </html>
