--- a/generator.html
+++ b/generator.html
@@ -18,11 +18,11 @@
                 COLOR PAL
             </h1>
             <ul>
-                <li><a href="index.html">login</a></li>
-                <li><a href="generator.html">generate</a></li>
-                <li><a href="create.html">create</a></li>
-                <li><a href="palletes.html">palletes</a></li>
-                <li><a href="following.html">friends</a></li>
+                <li><a href="index.html">Login</a></li>
+                <li><a href="generator.html">Generate</a></li>
+                <li><a href="create.html">Create</a></li>
+                <li><a href="palletes.html">Palettes</a></li>
+                <li><a href="following.html">Friends</a></li>
             </ul>
         </header>
         <main class="main-generator">
@@ -35,14 +35,14 @@
                     <div class="inner-box"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary my-button">save pallete</button>
-                    <button type="button" class="btn btn-secondary">generate</button>
+                    <button type="button" class="btn btn-primary my-button">Save Palette</button>
+                    <button type="button" class="btn btn-secondary">Generate</button>
                 </div>
             </div>            
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">GitHub</a></span>
         </footer>
     </body>
 </html>
