--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 COLOR PAL
             </h1>
             <ul>
-                <li><a href="index.html">login</a></li>
-                <li><a href="generator.html">generate</a></li>
-                <li><a href="create.html">create</a></li>
-                <li><a href="palletes.html">palletes</a></li>
-                <li><a href="following.html">friends</a></li>
+                <li><a href="index.html">Login</a></li>
+                <li><a href="generator.html">Generate</a></li>
+                <li><a href="create.html">Create</a></li>
+                <li><a href="palletes.html">Palettes</a></li>
+                <li><a href="following.html">Friends</a></li>
             </ul>
         </header>
         <main>
@@ -37,15 +37,15 @@
                     <input type="email" class="form-control" placeholder="example@email.com">
                     <input type="password" class="form-control" placeholder="password">
                     <span>
-                        <button type="submit" class="btn btn-primary my-button">login</button>
-                        <button type="submit" class="btn btn-secondary">create</button>
+                        <button type="submit" class="btn btn-primary my-button">Login</button>
+                        <button type="submit" class="btn btn-secondary">Create</button>
                     </span>
                 </form>
             </div>
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span><a href="https://github.com/crazymay35/startup">GitHub</a></span>
         </footer>
     </body>
 </html>
