--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="index-styles.css">
     </head>
     <body>
         <header>
             <h1>
-                <img src="paintbrush-and-palette-svgrepo-com.svg" 
+                <img src="public/paintbrush-and-palette-svgrepo-com.svg" 
                 alt="icon of a paintbrush and a color pallete">
                 COLOR PAL
             </h1>
